Adding CORS allowance for API, rebuild Sessions API interface, rewrite Swagger Documents
